# Conway-s-game-of-life

./: CMakeLists.txt  README.md  app.c  example.map  mapGen.c
.github/workflows/: cmake-multi-platform.yml
examples/: example1.map  example100x100full.map  example100x100min.map  example10x10full.map  example10x10min.map  example10x10random.map  example2.map  example3.map  example4.map  example5.map  example6.map  examplegiganticrandom.map  examplelargerandom.map
header/: file.h  maps.h  mem.h  settings.h  sim.h  simSpec.h  window.h  windowSpec.h
src/: file.c  mem.c  sim.c  window.c
